--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
    <strong>Teléfono : 4981-6653</strong></div>
   </div>
    <br>
-   <section class="Formulario">
+   <section class="Formulario"></section>
     <form name="contacto" netlify>
    
     <input class="controls" type="text"  placeholder="Ingrese su Nombre" required>
