--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   </div>
    <br>
    <section class="Formulario"></section>
-    <form name="contacto" netlify>
+    <form name="mail" netlify>
    
     <input class="controls" type="text"  placeholder="Ingrese su Nombre" required>
    
@@ -163,7 +163,7 @@
     <input class="controls" type="number"  placeholder="Ingrese su teléfono" >
 
     <textarea class="controls"  rows="3" placeholder="Ingrese un comentario" ></textarea>
-     <label>Ingrese el codigo de seguridad <img src="imagen2.php"></label>
+     
     <input class="controls" type="text" name="confirmacion" id="confirmacion" placeholder="Ingrese el  Codigo  de seguridad" >
     
     <input class="botons" type="submit" value="Enviar">
