--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
     <title>Proyecto webmaster</title>
 </head>
-<body >
+<body>
 <div class="titulo">
 <div class=clima>
     <h3 id="ciudad"></h3>
-    <p> Temperatura:</p> <p id="contenido"> <p>Grados</p>
+    <p> Temperatura:</p> <p id="contenido"></p> <p>Grados</p>
     <img id="imagen" alt="clima">    
   </div> 
  <script src="clima/clima.js"></script>
