--- a/traumatologica.html
+++ b/traumatologica.html
@@ -67,35 +67,35 @@
 <section>
 <h1>Antecedentes</h1>
 
-<p style="font-size: 30px;" >Esta es una actualización de una revisión Cochrane publicada por primera vez en The Cochrane Library , en el número 4, 2007 y actualizada anteriormente en 2011.
+<p style="font-size: 30px;padding-left: 30px;">Esta es una actualización de una revisión Cochrane publicada por primera vez en The Cochrane Library , en el número 4, 2007 y actualizada anteriormente en 2011.
 
 La disfunción vestibular periférica unilateral (DVPU) puede ocurrir como resultado de una enfermedad, un traumatismo o tras una operación. La disfunción se caracteriza por dolencias por mareos, alteraciones visuales o de la mirada y alteraciones del equilibrio. El tratamiento actual incluye medicación, maniobras físicas y regímenes de ejercicio, estos últimos conocidos colectivamente como rehabilitación vestibular.</p>
 
 <h1>Objetivos</h1>
 
-<p style="font-size: 30px;">Evaluar la eficacia de la rehabilitación vestibular en la población adulta residente en la comunidad de personas con disfunción vestibular periférica unilateral sintomática.</p>
+<p style="font-size: 30px;padding-left: 30px;">Evaluar la eficacia de la rehabilitación vestibular en la población adulta residente en la comunidad de personas con disfunción vestibular periférica unilateral sintomática.</p>
 
 <h1>Métodos de búsqueda</h1>
 
-<p style="font-size: 30px;" >Se realizaron búsquedas de ensayos publicados y no publicados en el registro de ensayos del Grupo Cochrane de Enfermedades de Oído, Nariz y Garganta (Cochrane Ear, Nose and Throat Disorders Group Trials Register); Registro Cochrane Central de Ensayos Controlados (Cochrane Central Register of Controlled Trials) (CENTRAL); PubMed; EMBASE; CINAHL; Web of Science; BIOSIS Previews; Cambridge Scientific Abstracts; ISRCTN y en otras fuentes adicionales. La búsqueda más reciente se realizó el 18 de enero de 2014.</p>
+<p style="font-size: 30px;padding-left: 30px;" >Se realizaron búsquedas de ensayos publicados y no publicados en el registro de ensayos del Grupo Cochrane de Enfermedades de Oído, Nariz y Garganta (Cochrane Ear, Nose and Throat Disorders Group Trials Register); Registro Cochrane Central de Ensayos Controlados (Cochrane Central Register of Controlled Trials) (CENTRAL); PubMed; EMBASE; CINAHL; Web of Science; BIOSIS Previews; Cambridge Scientific Abstracts; ISRCTN y en otras fuentes adicionales. La búsqueda más reciente se realizó el 18 de enero de 2014.</p>
 
 <h1>Criterios de selección</h1>
 
-<p style="font-size: 30px;">Ensayos controlados aleatorizados de adultos que viven en la comunidad, diagnosticados con disfunción vestibular periférica unilateral sintomática. Se buscaron comparaciones de la rehabilitación vestibular versus el control (por ejemplo, placebo), otro tratamiento (rehabilitación no vestibular, por ejemplo, farmacológica) u otra forma de rehabilitación vestibular. La medida de resultado principal fue el cambio en la sintomatología especificada (por ejemplo, proporción con mareo resuelto, frecuencia o gravedad del mareo). Los resultados secundarios fueron las medidas de la función, la calidad de vida y/o las medidas del estado fisiológico, cuando se ha confirmado la reproducibilidad y se ha mostrado que es pertinente o está relacionada con el estado de salud (por ejemplo, la posturografía), y los efectos adversos.</p>
+<p style="font-size: 30px; padding-left: 30px;">Ensayos controlados aleatorizados de adultos que viven en la comunidad, diagnosticados con disfunción vestibular periférica unilateral sintomática. Se buscaron comparaciones de la rehabilitación vestibular versus el control (por ejemplo, placebo), otro tratamiento (rehabilitación no vestibular, por ejemplo, farmacológica) u otra forma de rehabilitación vestibular. La medida de resultado principal fue el cambio en la sintomatología especificada (por ejemplo, proporción con mareo resuelto, frecuencia o gravedad del mareo). Los resultados secundarios fueron las medidas de la función, la calidad de vida y/o las medidas del estado fisiológico, cuando se ha confirmado la reproducibilidad y se ha mostrado que es pertinente o está relacionada con el estado de salud (por ejemplo, la posturografía), y los efectos adversos.</p>
 
 <h1>Obtención y análisis de los datos</h1>
 
-<p style="font-size: 30px;">Se utilizaron los procedimientos metodológicos estándar previstos por la Colaboración Cochrane.</p>
+<p style="font-size: 30px;padding-left: 30px;">Se utilizaron los procedimientos metodológicos estándar previstos por la Colaboración Cochrane.</p>
 
 <h1>Resultados principales</h1>
 
-<p style="font-size: 30px;">Se incluyeron en la revisión 39 estudios que incluían a 2441 participantes con trastornos vestibulares periféricos unilaterales. En los ensayos se abordó la eficacia de la rehabilitación vestibular frente a las intervenciones de control o simuladas, las intervenciones médicas u otras formas de rehabilitación vestibular. El hecho de no cegar a los evaluadores de resultados y la presentación de informes selectivos pueden haber sesgado los resultados en el 25% de los estudios, pero, por lo demás, hubo un bajo riesgo de sesgo de selección o de desgaste.
+<p style="font-size: 30px;padding-left: 30px; ">Se incluyeron en la revisión 39 estudios que incluían a 2441 participantes con trastornos vestibulares periféricos unilaterales. En los ensayos se abordó la eficacia de la rehabilitación vestibular frente a las intervenciones de control o simuladas, las intervenciones médicas u otras formas de rehabilitación vestibular. El hecho de no cegar a los evaluadores de resultados y la presentación de informes selectivos pueden haber sesgado los resultados en el 25% de los estudios, pero, por lo demás, hubo un bajo riesgo de sesgo de selección o de desgaste.
 
 Los análisis individuales y agrupados de la medida de resultado primaria, la frecuencia de los mareos, mostraron un efecto estadísticamente significativo a favor de la rehabilitación vestibular sobre el control o la no intervención (odds‐ratio (OR) 2,67; intervalo de confianza (IC) del 95%: 1,85 a 3,86; cuatro estudios, 565 participantes). Las medidas de resultados secundarios relacionadas con los niveles de actividad o participación medidos, por ejemplo, con el Inventario de Mareos y Discapacidades, también mostraron una fuerte tendencia hacia las diferencias significativas entre los grupos (diferencia de medias estandarizada (DME) ‐0,83; IC del 95%: ‐1,02 a ‐0,64). La excepción fue cuando se comparó la rehabilitación vestibular basada en el movimiento con las maniobras físicas para el vértigo posicional paroxístico benigno (VPPB), en el que este último mostró ser superior en la tasa de curación a corto plazo (OR 0,19; IC del 95%: 0,07 a 0,49). No se informaron eventos adversos.</p>
 
 <h1>Conclusiones de los autores</h1>
 
-<p style="font-size: 30px;">Existe evidencia de calidad moderadas a alta de que la rehabilitación vestibular es un tratamiento seguro y eficaz de la disfunción vestibular periférica unilateral, basada en varios ensayos controlados aleatorizados de alta calidad. Hay evidencia moderada de que la rehabilitación vestibular resuelve los síntomas y mejora el funcionamiento a medio plazo. Sin embargo, hay evidencia de que para el grupo específico de diagnóstico de VPPB, las maniobras físicas (de reposicionamiento) son más eficaces a corto plazo que la rehabilitación vestibular basada en ejercicios; aunque una combinación de ambas es eficaz para la recuperación funcional a más largo plazo. No hay evidencia suficiente para discriminar entre las diferentes formas de rehabilitación vestibular.</p>
+<p style="font-size: 30px;padding-left: 30px; ">Existe evidencia de calidad moderadas a alta de que la rehabilitación vestibular es un tratamiento seguro y eficaz de la disfunción vestibular periférica unilateral, basada en varios ensayos controlados aleatorizados de alta calidad. Hay evidencia moderada de que la rehabilitación vestibular resuelve los síntomas y mejora el funcionamiento a medio plazo. Sin embargo, hay evidencia de que para el grupo específico de diagnóstico de VPPB, las maniobras físicas (de reposicionamiento) son más eficaces a corto plazo que la rehabilitación vestibular basada en ejercicios; aunque una combinación de ambas es eficaz para la recuperación funcional a más largo plazo. No hay evidencia suficiente para discriminar entre las diferentes formas de rehabilitación vestibular.</p>
 </section>
 
 <footer>
