--- a/respiratoria.html
+++ b/respiratoria.html
@@ -65,7 +65,7 @@
    </div>
 </header> 
 <section>
-  <p style="font-size: 30px;margin-bottom: 30px;">
+  <p style="font-size: 30px;margin-bottom: 30px;padding-left: 30px;">
     Kinesiología Respiratoria se le llama a una serie de tratamientos que son utilizados como apoyo y/o complemento para mejorar patologías del sistema respiratorio. Todas aquellas en las que se vea afectada la función pulmonar, ya sea en niños o en adultos.
 
 Estos procedimientos traen consigo maniobras manuales, ejercicios respiratorios, posiciones y tratamientos terapéuticos que tienen como objetivo optimizar el intercambio gaseoso del organismo.
